2015-05-19  Uros Bizjak  <ubizjak@gmail.com>

	PR target/66174
	* config/i386/i386.c (expand_vec_perm_blend): Enable HImode and
	QImode inner modes for TARGET_AVX512BW.  Force mask operand
	to a register for AVX512F modes.

2015-04-16  Jan Hubicka  <hubicka@ucw.cz>

	PR target/66047
	* i386.c (ix86_function_sseregparm): Only return -1 if local function
	with implied regparm is called from -mno-sse function.
	(init_cumulative_args): Output error if ix86_function_sseregparm
	return -1 and SSE register would be needed.
	(function_arg_advance_32): Likewise.
	(function_arg_32): Likewise.
	* i386.h (ix86_args): Add decl field.

2015-04-16  Jan Hubicka  <hubicka@ucw.cz>

	PR target/66047
	* i386.c (ix86_function_sseregparm): Only return -1 if local function
	with implied regparm is called from -mno-sse function.
	(init_cumulative_args): Output error if ix86_function_sseregparm
	return -1 and SSE register would be needed.
	(function_arg_advance_32): Likewise.
	(function_arg_32): Likewise.
	* i386.h (ix86_args): Add decl field.
	* gcc.target/i386/pr66047.c: New testcase.

2015-04-16  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/65873
	* ipa-inline.c (can_inline_edge_p): Allow early inlining of always
	inlines across optimization boundary; be tolerant about COMDAT;
	allow inlining across -fstrict-aliasing boundary.

2015-05-16  Segher Boessenkool  <segher@kernel.crashing.org>

	Backport from mainline
	2015-05-13  Segher Boessenkool  <segher@kernel.crashing.org>

	PR rtl-optimization/30967
	* config/rs6000/rs6000.c (rs6000_rtx_costs): Don't consider
	destination mode for the cost of scc patterns.

2015-05-16  Uros Bizjak  <ubizjak@gmail.com>

	PR target/66140
	* config/alpha/alpha.c (get_aligned_mem): Also look for reload
	replacements in memory addresses.
	(get_unaligned_address): Ditto.

2015-05-13  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	Backport from mainline
	2015-05-12  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/65955