@@ -1,0 +1,4 @@
+int test1 (const char *p)
+{
+  return (int)(*p);
+}
