@@ -1,3 +1,12 @@
+2015-05-21  Ilya Enkovich  <enkovich.gnu@gmail.com>
+
+	Backport from mainline r223471
+	2015-05-21  Ilya Enkovich  <enkovich.gnu@gmail.com>
+
+	PR middle-end/66221
+	* gcc.dg/lto/pr66221_0.c: New test.
+	* gcc.dg/lto/pr66221_1.c: New test.
+
 2015-05-19  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR fortran/65903
